kubernetes/app/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: blog
  namespace: app
  annotations:
    # https://github.com/istio/istio/issues/2628#issuecomment-358145100
    auth.istio.io/8081: NONE
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: blog
        version: v1
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - image: threetreeslight/blog:latest
        imagePullPolicy: Always
        name: blog
        readinessProbe:
          httpGet:
            path: /healthy
            port: 8081
          periodSeconds: 10
          timeoutSeconds: 1
          initialDelaySeconds: 0
          failureThreshold: 6
          successThreshold: 1
        ports:
        # Use for regular access
        - containerPort: 8080
          protocol: TCP
        # Use for healthcheck
        - containerPort: 8081
          protocol: TCP
