kubernetes/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blog
  name: blog
  namespace: app
spec:
  type: NodePort
  selector:
    app: blog
  ports:
  - port: 8080
    protocol: TCP
    name: blog
    targetPort: 8080
